fixed alignment in mylistings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -460,7 +460,10 @@ body {
     border-radius: 5px;
     height: 80%;
     width: 75%;
+    overflow: hidden;
     margin: auto;
+    padding-bottom: 6%;
+    justify-content: center;
 }
 
 body.listings, html.listings{
@@ -501,7 +504,7 @@ div.create{
     color: white;
     padding: 16px 32px;
     text-decoration: none;
-    margin: auto;    
+    margin: auto;
     cursor: pointer;
     border-radius: 5px;
 }
